==> danielpth/boat/src/boat/remote/RF24/RF24.c <==
#include <atmel_start.h>
#include <string.h>
#include <stdio.h>
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

unsigned char RF24_get_status(void)
{
	unsigned char status = RF24_spiTrans(RF24_NOP);
	printf ("RF24_get_status %x\n\r", status);
    return status;
}

void RF24_setChannel(unsigned char channel)
{
    const unsigned char max_channel = 125;
    RF24_write_register1(RF_CH, rf24_min(channel, max_channel));
}

bool RF24_begin(void)
{

	unsigned char setup = 0;

	RF24_ce(LOW);
	//RF24_csn(HIGH);
	RF24_endTransaction();
	_delay_ms(200);

    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.

    // Reset NRF_CONFIG and enable 16-bit CRC.
    RF24_write_register1(NRF_CONFIG, _BV(PRIM_RX) | _BV(PWR_UP) | _BV(EN_CRC));
    _delay_ms(5);

#if 1
    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See documentation for a more complete explanation.
    RF24_setRetries(5, 15);

    // Reset value is MAX
    //setPALevel( RF24_PA_MAX ) ;


    // check for connected module and if this is a p nRF24l01 variant
    //
    if (RF24_setDataRate(RF24_250KBPS)) {
		printf ("variant\n\r");
        p_variant = true;
    }
    setup = RF24_read_register1(RF_SETUP);
    /*if( setup == 0b00001110 )     // register default for nRF24L01P
    {
      p_variant = true ;
    }*/

    // Then set the data rate to the slowest (and most reliable) speed supported by all
    // hardware.
    //RF24_setDataRate(RF24_1MBPS);

    // Initialize CRC and request 2-byte (16bit) CRC
    //setCRCLength( RF24_CRC_16 ) ;

    // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
    RF24_toggle_features();
    RF24_write_register1(FEATURE, 0);
    RF24_write_register1(DYNPD, 0);
    dynamic_payloads_enabled = false;

    // Reset current status
    // Notice reset and flush is the last thing we do
    RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    RF24_setChannel(76);

    // Flush buffers
    RF24_flush_rx();
    RF24_flush_tx();
	
	RF24_write_register1(RX_PW_P0, payload_size);

    RF24_powerUp(); //Power up by default when begin() is called

    // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
    // PTX should use only 22uA of power
    //RF24_write_register1(NRF_CONFIG, (RF24_read_register1(NRF_CONFIG)) & ~_BV(PRIM_RX));

    // if setup is 0 or ff then there was no response from module
#endif
    return (setup != 0 && setup != 0xff);
}

void RF24_startListening(void)
{
    RF24_powerUp();
    RF24_write_register1(NRF_CONFIG, RF24_read_register1(NRF_CONFIG) | _BV(PRIM_RX));
    RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));
    RF24_ce(HIGH);
	
#if 0	
    // Restore the pipe0 adddress, if exists
    if (pipe0_reading_address[0] > 0) {
        RF24_write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
    } else {
        RF24_closeReadingPipe(0);
    }

    // Flush buffers
    //flush_rx();
    if (RF24_read_register1(FEATURE) & _BV(EN_ACK_PAY)) {
        RF24_flush_tx();
    }
#endif
    // Go!
    //delayMicroseconds(100);
}

void RF24_stopListening(void)
{
    RF24_ce(LOW);

    RF24_delayMicroseconds(txDelay);
/*
    if (RF24_read_register1(FEATURE) & _BV(EN_ACK_PAY)) {
        RF24_delayMicroseconds(txDelay); //200
        RF24_flush_tx();
    }
    //flush_rx();
	*/
    RF24_write_register1(NRF_CONFIG, (RF24_read_register1(NRF_CONFIG)) & ~_BV(PRIM_RX));
/*
    RF24_write_register1(EN_RXADDR, RF24_read_register1(EN_RXADDR) | _BV(child_pipe_enable[0])); // Enable RX on pipe0
*/
    //delayMicroseconds(100);

}

void RF24_powerDown(void)
{
    RF24_ce(LOW); // Guarantee CE is low on powerDown
    RF24_write_register1(NRF_CONFIG, RF24_read_register1(NRF_CONFIG) & ~_BV(PWR_UP));
}

void RF24_powerUp(void)
{
    unsigned char cfg = RF24_read_register1(NRF_CONFIG);

    // if not powered up then power up and wait for the radio to initialize
    if (!(cfg & _BV(PWR_UP))) {
        RF24_write_register1(NRF_CONFIG, cfg | _BV(PWR_UP));

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        _delay_ms (5);
    }
}

bool RF24_writeBlocking(const void* buf, unsigned char len, uint32_t timeout)
{
    //Block until the FIFO is NOT full.
    //Keep track of the MAX retries and set auto-retry if seeing failures
    //This way the FIFO will fill up and allow blocking until packets go through
    //The radio will auto-clear everything in the FIFO as long as CE remains high

    unsigned char timer = millis();

    while ((RF24_get_status()
            & (_BV(TX_FULL)))) {          //Blocking only if FIFO is full. This will loop and block until TX is successful or timeout

        if (RF24_get_status() & _BV(MAX_RT)) {                      //If MAX Retries have been reached
            RF24_reUseTX();                                          //Set re-transmit and clear the MAX_RT interrupt flag
            if (millis() - timer > timeout) {
                return 0;
            }          //If this payload has exceeded the user-defined timeout, exit and return 0
        }
        #if defined(FAILURE_HANDLING) || defined(RF24_LINUX)
        if (millis() - timer > (timeout + 95)) {
            errNotify();
            #if defined(FAILURE_HANDLING)
            return 0;
            #endif
        }
        #endif

    }

    //Start Writing
    RF24_startFastWrite(buf, len, 0, false);                                  //Write the payload if a buffer is clear

    return 1;                                                  //Return 1 to indicate successful transmission
}

bool RF24_txStandBy()
{

    #if defined(FAILURE_HANDLING) || defined(RF24_LINUX)
    uint32_t timeout = millis();
    #endif
    while (!(RF24_read_register1(FIFO_STATUS) & _BV(TX_EMPTY))) {
        if (RF24_get_status() & _BV(MAX_RT)) {
            RF24_write_register1(NRF_STATUS, _BV(MAX_RT));
            RF24_ce(LOW);
            RF24_flush_tx();    //Non blocking, flush the data
            return 0;
        }
        #if defined(FAILURE_HANDLING) || defined(RF24_LINUX)
        if (millis() - timeout > 95) {
            errNotify();
            #if defined(FAILURE_HANDLING)
            return 0;
            #endif
        }
        #endif
    }

    RF24_ce(LOW);               //Set STANDBY-I mode
    return 1;
}

void RF24_maskIRQ(bool tx, bool fail, bool rx)
{

    unsigned char config = RF24_read_register1(NRF_CONFIG);
    /* clear the interrupt flags */
    config &= ~(1 << MASK_MAX_RT | 1 << MASK_TX_DS | 1 << MASK_RX_DR);
    /* set the specified interrupt flags */
    config |= fail << MASK_MAX_RT | tx << MASK_TX_DS | rx << MASK_RX_DR;
    RF24_write_register1(NRF_CONFIG, config);
}

unsigned char RF24_getDynamicPayloadSize(void)
{
    unsigned char result = 0;

    RF24_beginTransaction();
    SPI_transfer(R_RX_PL_WID);
    result = SPI_transfer(0xff);
    RF24_endTransaction();

    if (result > 32) {
        RF24_flush_rx();
        _delay_ms (2);
        return 0;
    }
    return result;
}

bool RF24_available_pipe(unsigned char* pipe_num)
{
    if (!(RF24_read_register1(FIFO_STATUS) & _BV(RX_EMPTY))) {

        // If the caller wants the pipe number, include that
        if (pipe_num) {
            unsigned char status = RF24_get_status();
            *pipe_num = (status >> RX_P_NO) & 0x07;
        }
        return 1;
    }
    return 0;
}

void RF24_read(void* buf, unsigned char len)
{

    // Fetch the payload
    RF24_read_payload(buf, len);

    //Clear the two possible interrupt flags with one command
    RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(MAX_RT) | _BV(TX_DS));

}

void RF24_whatHappened(bool* tx_ok, bool* tx_fail, bool* rx_ready)
{
    // Read the status & reset the status in one easy call
    // Or is that such a good idea?
    unsigned char status = RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Report to the user what happened
    *tx_ok = status & _BV(TX_DS);
    *tx_fail = status & _BV(MAX_RT);
    *rx_ready = status & _BV(RX_DR);
}

void RF24_openWritingPipe(const unsigned char* address)
{
    // Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
    // expects it LSB first too, so we're good.
    RF24_write_register(RX_ADDR_P0, address, addr_width);
    RF24_write_register(TX_ADDR, address, addr_width);

    //const unsigned char max_payload_size = 32;
    //RF24_write_register(RX_PW_P0,rf24_min(payload_size,max_payload_size));
    RF24_write_register1(RX_PW_P0, payload_size);
}

void RF24_openReadingPipe(unsigned char child, const unsigned char* address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, address, addr_width);
    }
    if (child <= 6) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
            RF24_write_register(child_pipe[child], address, addr_width);
        } else {
            RF24_write_register(child_pipe[child], address, 1);
        }
        RF24_write_register1(child_payload_size[child], payload_size);

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        RF24_write_register1(EN_RXADDR, RF24_read_register1(EN_RXADDR) | _BV(child_pipe_enable[child]));

    }
}

void RF24_closeReadingPipe(unsigned char pipe)
{
    RF24_write_register1(EN_RXADDR, RF24_read_register1(EN_RXADDR) & ~_BV(child_pipe_enable[pipe]));
}

void RF24_enableDynamicPayloads(void)
{
    // Enable dynamic payload throughout the system

    //toggle_features();
    RF24_write_register1(FEATURE, RF24_read_register1(FEATURE) | _BV(EN_DPL));

    printf("FEATURE=%i\r\n", RF24_read_register1(FEATURE));

    // Enable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    RF24_write_register1(DYNPD, RF24_read_register1(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

    dynamic_payloads_enabled = true;
}

void RF24_disableDynamicPayloads(void)
{
    // Disables dynamic payload throughout the system.  Also disables Ack Payloads

    //toggle_features();
    RF24_write_register1(FEATURE, 0);

    printf("FEATURE=%i\r\n", RF24_read_register1(FEATURE));

    // Disable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    RF24_write_register1(DYNPD, 0);

    dynamic_payloads_enabled = false;
}

void RF24_enableAckPayload(void)
{
    //
    // enable ack payload and dynamic payload features
    //

    //toggle_features();
    RF24_write_register1(FEATURE, RF24_read_register1(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL));

    printf("FEATURE=%i\r\n", RF24_read_register1(FEATURE));

    //
    // Enable dynamic payload on pipes 0 & 1
    //
    RF24_write_register1(DYNPD, RF24_read_register1(DYNPD) | _BV(DPL_P1) | _BV(DPL_P0));
    dynamic_payloads_enabled = true;
}

void RF24_enableDynamicAck(void)
{
    //
    // enable dynamic ack features
    //
    //toggle_features();
    RF24_write_register1(FEATURE, RF24_read_register1(FEATURE) | _BV(EN_DYN_ACK));

    printf("FEATURE=%i\r\n", RF24_read_register1(FEATURE));
}

void RF24_writeAckPayload(unsigned char pipe, const void* buf, unsigned char len)
{
    const unsigned char* current = buf;
    unsigned char data_len = rf24_min(len, 32);

    RF24_beginTransaction();
    SPI_transfer(W_ACK_PAYLOAD | (pipe & 0x07));

    while (data_len--) {
        SPI_transfer(*current++);
    }
    RF24_endTransaction();
}

void RF24_setAutoAck_pipe(unsigned char pipe, bool enable)
{
    if (pipe <= 6) {
        unsigned char en_aa = RF24_read_register1(EN_AA);
        if (enable) {
            en_aa |= _BV(pipe);
        } else {
            en_aa &= ~_BV(pipe);
        }
        RF24_write_register1(EN_AA, en_aa);
    }
}

bool RF24_testRPD(void)
{
    return (RF24_read_register1(RPD) & 1);
}

void RF24_setPALevel(unsigned char level)
{

    unsigned char setup = RF24_read_register1(RF_SETUP) & 0xF8;

    if (level > 3) {                        // If invalid level, go to max PA
        level = (RF24_PA_MAX << 1) + 1;        // +1 to support the SI24R1 chip extra bit
    } else {
        level = (level << 1) + 1;            // Else set level as requested
    }

    RF24_write_register1(RF_SETUP, setup |= level);    // Write it to the chip
}

bool RF24_setDataRate(rf24_datarate_e speed)
{
    bool result = false;
	unsigned char setup;
	
    setup = RF24_read_register1(RF_SETUP);
    // HIGH and LOW '00' is 1Mbs - our default
    setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));

	switch (speed) {
		case RF24_250KBPS:
		setup |= _BV(RF_DR_LOW);
		txDelay = 450;
		break;
		
		case RF24_1MBPS:
		//RF_DR_LOW = 0 & RF_DR_HIGH = 0
		txDelay = 250; // pior caso TODO: verificar esse tempo no datasheet
		break;
		
		case RF24_2MBPS:
		setup |= _BV(RF_DR_HIGH);
		txDelay = 190;
		break;
	}
    
    RF24_write_register1(RF_SETUP, setup);

    // Verify our result
    if (RF24_read_register1(RF_SETUP) == setup) {
        result = true;
		printf ("setDataRate OK\n\r");
    } else {
		printf ("setDataRate NOK\n\r");
	}
    return result;
}

void RF24_setCRCLength(rf24_crclength_e length)
{
    unsigned char config = RF24_read_register1(NRF_CONFIG) & ~(_BV(CRCO) | _BV(EN_CRC));

    // switch uses RAM (evil!)
    if (length == RF24_CRC_DISABLED) {
        // Do nothing, we turned it off above.
    } else if (length == RF24_CRC_8) {
        config |= _BV(EN_CRC);
    } else {
        config |= _BV(EN_CRC);
        config |= _BV(CRCO);
    }
    RF24_write_register1(NRF_CONFIG, config);
}

void RF24_disableCRC(void)
{
    unsigned char disable = RF24_read_register1(NRF_CONFIG) & ~_BV(EN_CRC);
    RF24_write_register1(NRF_CONFIG, disable);
}

void RF24_setRetries(unsigned char delay, unsigned char count)
{
    RF24_write_register1(SETUP_RETR, (delay & 0xf) << ARD | (count & 0xf) << ARC);
}
